--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,10 +19,10 @@
                 <label for="lname">Last name:</label><br>
                 <input type="text" id="lname" name="lname" required> <br>
                 <label for="email">E-Mail:</label> <br>
-                <input type="email" id="email" pattern=".+@example\.com" size="30" required />
+                <input type="email" id="email" pattern=".+@example\.com" size="30" required />  <br>
 
-                <label for="goals">What are your fitness goals?:</label>
-                <select name="fitness-goals">
+                <label for="goals">What are your fitness goals? </label> <br>
+                <select name="fitness-goals" id = "fit" onchange ="showTextBox()">
                     <option value="lose-weight">Lose Weight</option>
                     <option value="build-muscle">Build Muscle</option>
                     <option value="increase-endurance">Increase Endurance</option>
@@ -39,12 +39,25 @@
                     <option value="increase-mobility">Increase Mobility</option>
                     <option value="enhance-posture">Enhance Posture</option>
                     <option value="general-fitness">General Fitness & Well-being</option>
+                    <option value="other">Other</option>
+                    <input type="text" id="myTextBox" style="display: none;" placeholder="Enter text here">
                 </select>
-
             </form>
+            <button type="submit" id="submit"> Submit </button>
         </form>
+
+        
     </main>
-    <script src="index.js"></script>
-</body>
+    <script>
+        function showTextBox() {
+          var selectBox = document.getElementById("fit");
+          var textBox = document.getElementById("myTextBox");
+          if (selectBox.value === "other") {
+            textBox.style.display = "block";
+          } else {
+            textBox.style.display = "none";
+          }
+        }
+        </script></body>
 
 </html>
